fix issue of likes getting incremented incorrectly and ensure comments section is visible when a new comment is made

--- a/src/components/ContactItem.css
+++ b/src/components/ContactItem.css
@@ -7,6 +7,7 @@
 
 .contactItem:hover {
     background-color: var(--searchBackground);
+    cursor: pointer;
 }
 
 .contactItem > h4 {
